--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -4,15 +4,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-
-.auth-page-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-  width: 100vw;
-}
 body {
   display: block;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -23,6 +14,14 @@ body {
   justify-content: center;
   padding: 20px;
   
+}
+.auth-page-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  width: 100vw;
 }
 a {
   text-decoration: none;
@@ -251,12 +250,12 @@ form {
 .form-group input:focus {
   outline: none;
   border-color: #667eea;
-  box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+  box-shadow: 0 0 0 3px rgba(133, 135, 146, 0.1);
   transform: translateY(-2px);
 }
 
 .form-group input::placeholder {
-  color: #95a5a6;
+  color: lab(69.64% 4.53 -7.69);
 }
 
 /* Button Styles */
